<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="GALLERY"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/about" />
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/results" />
        <item
            android:id="@+id/Rewards"
            android:icon="@drawable/wallet"
            android:title="REWARDS"/>
        <item
            android:iconTint="@color/navtext"
            android:icon="@drawable/location"
            android:id="@+id/location"
            android:title="@string/locate"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/emailus" />
        <item
            android:id="@+id/sign_out"
            android:title="@string/signout"
            android:icon="@drawable/ic_menu_manage"/>
    </group>

</menu>
