<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titlefaq"
        android:background="@drawable/cardbg2"
        android:padding="@dimen/_8sdp"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_centerHorizontal="true"
        android:text="FAQs"
        android:textColor="@color/cardborder"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/q1"
        android:layout_below="@id/titlefaq"
        android:text="@string/q1"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/a1"
        android:layout_below="@id/q1"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:text="@string/a1"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/q2"
        android:layout_below="@id/a1"
        android:text="@string/q2"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/a2"
        android:layout_below="@id/q2"
        android:text="@string/a2"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/q3"
        android:layout_below="@id/a2"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:text="@string/q3"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/a3"
        android:layout_below="@id/q3"
        android:text="@string/a3"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/q4"
        android:layout_below="@id/a3"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:text="@string/q4"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/a4"
        android:layout_below="@id/q4"
        android:text="@string/a4"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/q5"
        android:layout_below="@id/a4"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:text="@string/q5"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/a5"
        android:layout_below="@id/q5"
        android:text="@string/a5"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/q6"
        android:layout_below="@id/a5"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:text="@string/q6"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/a6"
        android:layout_below="@id/q6"
        android:text="@string/a6"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/q7"
        android:layout_below="@id/a6"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_18ssp"
        android:text="@string/q7"
        android:textColor="@color/cardborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />'
    <TextView
        android:id="@+id/a7"
        android:layout_below="@id/q7"
        android:text="@string/a7"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />





</RelativeLayout>

</ScrollView>